# otus6

./: CMakeLists.txt  main.cpp  matrix.h
